--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+*{
+  background-color: antiquewhite;
+}
+
 .App {
   text-align: center;
 }
@@ -5,6 +9,18 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.App-link{
+  color: #61dafb;
+  text-decoration: none;
+  font-size: 30px;
+  margin: 10px;
+  font-weight: 800;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  letter-spacing: 2px;
+  text-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
